third_party/move/move-compiler-v2/tests/lambda/inline-parity/eq_inline.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `m::foo` has a function parameter:
  ┌─ tests/lambda/inline-parity/eq_inline.move:3:9
  │
3 │     fun foo(f: |&u64|) {
  │         ^^^ - Parameter `f` has function-valued type `|&u64|`.

warning: Unused parameter `f`. Consider removing or prefixing with an underscore: `_f`
  ┌─ tests/lambda/inline-parity/eq_inline.move:3:13
  │
3 │     fun foo(f: |&u64|) {
  │             ^
