third_party/move/move-compiler-v2/tests/lambda/inline-parity/eq_inline.move
module 0x42::m {

    fun foo(f: |&u64|) {
    }

    fun g() {
        foo(|v| {
            v == &1;
        });
    }


}
